--- a/public/main.css
+++ b/public/main.css
@@ -154,7 +154,8 @@ fieldset {
 .recent-crisis {
   margin: 1rem 0.5rem;
 }
-.crisis-container {
+.crisis-container,
+.my-crisis-container {
   display: grid;
   grid-gap: 0.5rem;
   grid-template-columns: minmax(100px, 1fr);
@@ -164,4 +165,9 @@ fieldset {
   border: 2px solid #2a363b;
   box-shadow: 0 2px 4px grey;
   border-radius: 5px;
+}
+.my-crisis,
+.my-account,
+.donation-page {
+  display: none;
 }
