--- a/public/main.css
+++ b/public/main.css
@@ -10,6 +10,7 @@ body {
   margin: 0 auto;
   display: grid;
   font-family: "Poppins";
+  grid-template-rows: 4rem 1fr 2rem;
   grid-template-areas:
     "header"
     "content"
@@ -61,7 +62,7 @@ body {
 
 .footer {
   grid-area: footer;
-  padding: 1rem 0;
+  padding: 0.25rem 0;
   text-align: center;
   color: #fecea8;
   background-color: #2a363b;
@@ -172,6 +173,7 @@ fieldset {
 .my-crisis,
 .my-account,
 .my-donation,
-.donation-page {
+.donation-page,
+.donation-update-page {
   display: none;
 }
