--- a/public/main.css
+++ b/public/main.css
@@ -22,9 +22,9 @@ body {
   width: 100%;
   height: 4rem;
   z-index: 1;
-  color: #fecea8;
-  background-color: #2a363b;
-  box-shadow: 0 4px 10px grey;
+  color: #fbe8d3;
+  background-color: #283c63;
+  box-shadow: 0 4px 10px #928a97;
 }
 
 .header h1 {
@@ -46,7 +46,7 @@ body {
 
 .header li:hover {
   cursor: pointer;
-  color: #e84a5f;
+  color: #f85f73;
 }
 
 .hero-img {
@@ -57,16 +57,16 @@ body {
   grid-area: content;
   text-align: center;
   font-family: "Roboto";
-  color: #2a363b;
+  color: #283c63;
 }
 
 .footer {
   grid-area: footer;
   padding: 0.25rem 0;
   text-align: center;
-  color: #fecea8;
-  background-color: #2a363b;
-  box-shadow: 0 -2px 5px grey;
+  color: #fbe8d3;
+  background-color: #283c63;
+  box-shadow: 0 -2px 5px #928a97;
 }
 
 .register-btn,
@@ -75,20 +75,21 @@ body {
 }
 
 button {
+  margin: 10px 20px;
   text-transform: uppercase;
   color: #fff;
-  background-color: #e84a5f;
+  background-color: #f85f73;
   font-size: 1rem;
   padding: 0.25rem 0.1rem;
-  border: 2px solid #e84a5f;
-  box-shadow: 0 2px 4px grey;
+  border: 2px solid #f85f73;
+  box-shadow: 0 2px 4px #928a97;
   border-radius: 5px;
   font-weight: bold;
 }
 
 button:hover {
   cursor: pointer;
-  color: #e84a5f;
+  color: #f85f73;
   background-color: #fff;
   box-shadow: none;
 }
@@ -98,9 +99,7 @@ button:hover {
 }
 
 .register-page,
-.login-page,
-.landing-page,
-.headbar {
+.login-page {
   display: none;
 }
 
@@ -117,11 +116,8 @@ fieldset {
   margin-bottom: 1rem;
 }
 
-/* .main-page {
-  display: none;
-} */
 .main-page {
-  display: grid;
+  display: none;
   grid-template-columns: 150px 1fr;
   grid-template-areas: "sidebar main" ".. main";
 }
@@ -138,7 +134,7 @@ fieldset {
 }
 .sidebar li:hover {
   cursor: pointer;
-  color: #e84a5f;
+  color: #f85f73;
 }
 .main-container {
   grid-area: main;
@@ -164,8 +160,8 @@ fieldset {
 }
 .crisis-card {
   padding: 5px;
-  border: 2px solid #2a363b;
-  box-shadow: 0 2px 4px grey;
+  border: 2px solid #283c63;
+  box-shadow: 0 2px 4px #928a97;
   border-radius: 5px;
 }
 .my-crisis,
@@ -179,6 +175,55 @@ fieldset {
 }
 
 #myChart {
-  width: 90%;
+  width: 90% !important;
   height: 90%;
+}
+
+/* LANDING PAGE STYLES */
+#hero-page,
+#feature-page {
+  height: 100vh;
+}
+
+.feature-content,
+.howto-content {
+  text-align: left;
+}
+
+.howto-content ol li {
+  line-height: 1.4;
+}
+
+a {
+  text-decoration: none;
+}
+
+.button {
+  margin: 10px 20px;
+  text-transform: uppercase;
+  color: #fff;
+  background-color: #f85f73;
+  font-size: 1.5rem;
+  padding: 0.5rem 0.25rem;
+  border: 4px solid #f85f73;
+  box-shadow: 0 2px 4px #928a97;
+  border-radius: 10px;
+  font-weight: bold;
+}
+
+.button:hover {
+  cursor: pointer;
+  color: #f85f73;
+  background-color: #fff;
+  box-shadow: none;
+}
+
+.fake-btn {
+  text-transform: uppercase;
+  color: #fff;
+  background-color: #f85f73;
+  font-size: 0.8rem;
+  padding: 0.1rem;
+  border: 2px solid #f85f73;
+  border-radius: 4px;
 }
