--- a/public/main.css
+++ b/public/main.css
@@ -9,10 +9,14 @@ a {
 }
 fieldset {
   margin: 0 auto;
+  padding: 10px;
   width: 70%;
 }
 .form-group {
-  margin-bottom: 1rem;
+  margin: 0.8rem 0;
+}
+input {
+  height: 1.6rem;
 }
 
 .container {
