--- a/public/main.css
+++ b/public/main.css
@@ -200,7 +200,7 @@ button:hover {
 /* How To Page */
 #howto-page {
   width: 96%;
-  padding: 0 1rem;
+  padding-left: 2rem;
   margin: 1rem auto;
 }
 .howto-title {
