--- a/public/main.css
+++ b/public/main.css
@@ -50,23 +50,23 @@ a {
   width: 100%;
   height: 4rem;
   z-index: 1;
-  color: #fbe8d3;
-  background-color: #283c63;
-  box-shadow: 0 4px 10px #928a97;
+  color: #eeeeee;
+  background-color: #222831;
+  box-shadow: 0 4px 10px #393e46;
 }
 .content {
   grid-area: content;
   text-align: center;
   font-family: "Roboto";
-  color: #283c63;
+  color: #222831;
 }
 .footer {
   grid-area: footer;
   padding: 0.25rem 0;
   text-align: center;
-  color: #fbe8d3;
-  background-color: #283c63;
-  box-shadow: 0 -2px 5px #928a97;
+  color: #eeeeee;
+  background-color: #222831;
+  box-shadow: 0 -2px 5px #393e46;
 }
 .crisis-container,
 .my-crisis-container,
@@ -81,17 +81,17 @@ button {
   margin: 10px 20px;
   text-transform: uppercase;
   color: #fff;
-  background-color: #f85f73;
+  background-color: #00adb5;
   font-size: 1rem;
   padding: 0.25rem 0.1rem;
-  border: 2px solid #f85f73;
-  box-shadow: 0 2px 4px #928a97;
+  border: 2px solid #00adb5;
+  box-shadow: 0 2px 4px #393e46;
   border-radius: 5px;
   font-weight: bold;
 }
 button:hover {
   cursor: pointer;
-  color: #f85f73;
+  color: #00adb5;
   background-color: #fff;
   box-shadow: none;
 }
@@ -113,9 +113,13 @@ input {
 .crisis-card,
 .account-card {
   padding: 10px 5px;
-  border: 2px solid #283c63;
-  box-shadow: 0 2px 4px #928a97;
+  border: 2px solid #222831;
+  box-shadow: 0 2px 4px #393e46;
   border-radius: 5px;
+}
+.single-crisis p {
+  line-height: 1.4;
+  text-align: left;
 }
 
 /* === LANDING PAGE STYLES === */
@@ -142,17 +146,17 @@ input {
   margin: 0 20px;
   text-transform: uppercase;
   color: #fff;
-  background-color: #f85f73;
+  background-color: #00adb5;
   font-size: 1rem;
   padding: 0.5rem 0.25rem;
-  border: 4px solid #f85f73;
-  box-shadow: 0 2px 4px #928a97;
+  border: 4px solid #00adb5;
+  box-shadow: 0 2px 4px #393e46;
   border-radius: 10px;
   font-weight: bold;
 }
 .button:hover {
   cursor: pointer;
-  color: #f85f73;
+  color: #00adb5;
   background-color: #fff;
   box-shadow: none;
 }
@@ -199,10 +203,10 @@ input {
 .fake-btn {
   text-transform: uppercase;
   color: #fff;
-  background-color: #f85f73;
+  background-color: #00adb5;
   font-size: 0.8rem;
   padding: 0.1rem;
-  border: 2px solid #f85f73;
+  border: 2px solid #00adb5;
   border-radius: 4px;
 }
 
@@ -212,14 +216,14 @@ nav ul {
 }
 nav ul li {
   display: block;
-  background-color: #283c63;
+  background-color: #222831;
   width: 100%;
   padding: 20px 0;
 }
 nav ul li:hover {
   cursor: pointer;
-  background-color: #fbe8d3;
-  color: #283c63;
+  background-color: #eeeeee;
+  color: #222831;
 }
 .menu-label {
   font-size: 2rem;
@@ -258,7 +262,7 @@ input#inside-menu,
   padding-top: 2rem;
   width: 100%;
   height: 100%;
-  background: linear-gradient(270deg, #fbe8d3, #f85f73);
+  background: linear-gradient(270deg, #eeeeee, #00adb5);
   background-size: 400% 400%;
   -webkit-animation: RegLogBG 30s ease infinite;
   -moz-animation: RegLogBG 30s ease infinite;
@@ -271,7 +275,7 @@ input#inside-menu,
 }
 .register-form fieldset {
   border-radius: 1rem;
-  border: 1px solid #928a97;
+  border: 1px solid #393e46;
   background-color: #fff;
 }
 
@@ -281,7 +285,7 @@ input#inside-menu,
   padding-top: 2rem;
   width: 100%;
   height: 100%;
-  background: linear-gradient(270deg, #fbe8d3, #f85f73);
+  background: linear-gradient(270deg, #eeeeee, #00adb5);
   background-size: 400% 400%;
   -webkit-animation: RegLogBG 30s ease infinite;
   -moz-animation: RegLogBG 30s ease infinite;
@@ -294,7 +298,7 @@ input#inside-menu,
 }
 .login-form fieldset {
   border-radius: 1rem;
-  border: 1px solid #928a97;
+  border: 1px solid #393e46;
   background-color: #fff;
 }
 
